# Python-Image-Converter

./: .all-contributorsrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pr-agent.yml  python-publish.yml  tests.yml
app/: convert.py
raw_image_converter/: __init__.py  __main__.py  utils.py
tests/: test_utils_calculate_image_dimension.py  test_utils_check_file_type.py  test_utils_message.py  test_utils_split_file_extension.py
