[tool.poetry]
name = "raw-image-converter"
version = "1.1.3"
description = "Batch image convertions"
authors = ["Achilles Moraites <achimoraites@yahoo.gr>"]
license = "MIT"
readme = "README.md"
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        'Topic :: Utilities',
    ]
keywords = ["cli", "converter", "raw", "images"]
repository = "https://github.com/achimoraites/Python-Image-Converter"
packages=[{include = "raw_image_converter"}]

[tool.poetry.dependencies]
python = "^3.9"
imageio = "2.16.2"
pillow = "10.3.0"
rawpy = "0.19.1"
numpy = "1.26.4"
colorama = "0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
raw_image_converter = "raw_image_converter.__main__:main"
